--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "package": "ink.chyk.miBandCountdown",
   "name": "倒数日",
-  "versionName": "1.0.0",
+  "versionName": "1.1.0",
   "versionCode": 1,
   "minPlatformVersion": 1000,
   "icon": "/common/logo.png",
@@ -22,9 +22,6 @@
       "name": "system.storage" 
     },
     { 
-      "name": "system.file" 
-    },
-    { 
       "name": "system.vibrator" 
     }
   ],
@@ -36,10 +33,12 @@
     "entry": "pages/index",
     "pages": {
       "pages/index": {
-        "component": "index"
+        "component": "index",
+        "launchMode": "singleTask"
       },
       "pages/list": {
-        "component": "list"
+        "component": "list",
+        "launchMode": "singleTask"
       },
       "pages/edit": {
         "component": "edit",
